1999-11-16  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* mule/mule-conf.el (sisheng): Moved from mule/chinese.el.
	(chinese-isoir165): Moved from mule/chinese.el.
	(chinese-cns11643-3): Moved from mule/chinese.el.
	(chinese-cns11643-4): Moved from mule/chinese.el.
	(chinese-cns11643-5): Moved from mule/chinese.el.
	(chinese-cns11643-6): Moved from mule/chinese.el.
	(chinese-cns11643-7): Moved from mule/chinese.el.

	* mule/chinese.el: Move definition of coded-charsets to
	mule/mule-conf.el.

	* utf-2000/char-db-util.el (insert-char-data): Change order of
	`morohashi-daikanwa'.

1999-11-16  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* utf-2000/char-db-util.el (char-attribute-name<) Use
	`charset-iso-final-char' instead of `charset-final'; fixed.
	(insert-char-data): Delete unused local variable `name'; use
	`charset-iso-graphic-plane' instead of `charset-graphic'.
	(char-db-update-comment): Use `charset-iso-graphic-plane' instead
	of `charset-graphic'.
	(insert-char-range-data): Delete unused local variable `variants'.
	(what-character-original-window-configuration): Define to avoid
	compiler warning.

1999-11-15  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* utf-2000/char-db-util.el (ideographic-radicals): New constant.
	(insert-char-data): Change order of `ideographic-radical',
	`ideographic-strokes' and `total-strokes'; adjust width of the
	first element of a list.

1999-11-15  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* mule/mule-charset.el (default-coded-charset-priority-list): Add
	`ideograph-daikanwa'.

1999-11-15  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* dumped-lisp.el (preloaded-file-list): Delete
	"ccs-jisx0201-latin.el".

	* utf-2000/ccs-jisx0201-latin.el: Deleted.

1999-11-15  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* dumped-lisp.el (preloaded-file-list): Add
	"u031A0-Extended-Bopomofo" in UTF-2000.

	* utf-2000/u031A0-Extended-Bopomofo.el: New file.

1999-11-15  MORIOKA Tomohiko  <tomo@etl.go.jp>
